apps/paperless/manifests/app/statefulSet.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app.kubernetes.io/component: webservice
    app.kubernetes.io/name: paperless
  name: paperless
  namespace: paperless
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: webservice
      app.kubernetes.io/name: paperless
  serviceName: paperless-headless
  template:
    metadata:
      annotations:
        checksum.config/md5: "9"
        kubectl.kubernetes.io/default-container: paperless
      labels:
        app.kubernetes.io/component: webservice
        app.kubernetes.io/name: paperless
    spec:
      containers:
        - image: ghcr.io/paperless-ngx/paperless-ngx:2.20.15
          name: paperless
          ports:
            - containerPort: 8000
              name: http
            - containerPort: 5555
              name: metrics
          readinessProbe:
            httpGet:
              path: /accounts/login/?next=/
              port: http
            initialDelaySeconds: 15
            periodSeconds: 5
          resources:
            limits:
              cpu: 3
            #  memory: 4Gi
            requests:
              cpu: 1
              memory: 2Gi
          securityContext:
            privileged: false
          volumeMounts:
            - mountPath: /usr/src/paperless/data
              name: data
            - mountPath: /usr/src/paperless/media
              name: media
            - mountPath: /usr/src/paperless/consume
              name: consume
      restartPolicy: Always
      securityContext:
        fsGroup: 1000
      serviceAccountName: paperless
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: paperless-data
        - name: media
          persistentVolumeClaim:
            claimName: paperless-media
        - name: consume
          persistentVolumeClaim:
            claimName: consume
